--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -8,6 +8,6 @@ jobs:
       - run: ls -al
       - uses: devcontainers/ci@v0.3
         with:
-          # imageName: ghcr.io/example/example-devcontainer
-          # cacheFrom: ghcr.io/example/example-devcontainer
+          imageName: ghcr.io/aatchison/features/idpbuilder:2.0.0
+          cacheFrom: ghcr.io/aatchison/features/idpbuilder:2.0.0
           push: always
