--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -5,6 +5,7 @@ jobs:
   ci-test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - run: ls -al
       - uses: devcontainers/ci@v0.3
         with:
