--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -12,8 +12,11 @@ jobs:
           imageName: ghcr.io/devcontainer-ci/example-devcontainer
           cacheFrom: ghcr.io/devcontainer-ci/example-devcontainer
           push: always
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: devcontainers/ci@v0.3
         with:
           cacheFrom: ghcr.io/devcontainer-ci/example-devcontainer
           push: never
           runCmd: idpbuilder create --package-dir ./examples/ack
+        
