--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -7,13 +7,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: ls -al
+      - uses: docker/login-action@v2 
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - uses: devcontainers/ci@v0.3
         with:
           imageName: ghcr.io/aatchison/devcontainer-ci/example-devcontainer
           cacheFrom: ghcr.io/aatchison/devcontainer-ci/example-devcontainer
           push: always
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: devcontainers/ci@v0.3
         with:
           cacheFrom: ghcr.io/devcontainer-ci/example-devcontainer
